--- a/login.html
+++ b/login.html
@@ -1,1 +1,37 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Tradofy Login</title>
+  <link rel="stylesheet" href="login.css" />
+</head>
+<body>
+  <div class="container">
+    <h1>Tradofy</h1>
 
+    <!-- Login Form -->
+    <form id="loginForm" class="form">
+      <h2>Login</h2>
+      <input type="text" id="loginUsername" placeholder="Username" required />
+      <input type="password" id="loginPassword" placeholder="Password" required />
+      <button type="submit">Login</button>
+      <p>Don't have an account? <a id="showRegister" href="#">Register</a></p>
+      <p id="loginError" class="error"></p>
+    </form>
+
+    <!-- Register Form -->
+    <form id="registerForm" class="form hidden">
+      <h2>Register</h2>
+      <input type="email" id="registerEmail" placeholder="Gmail" required />
+      <input type="text" id="registerUsername" placeholder="Username" required />
+      <input type="password" id="registerPassword" placeholder="Password" required />
+      <button type="submit">Register</button>
+      <p>Already have an account? <a id="showLogin" href="#">Login</a></p>
+      <p id="registerError" class="error"></p>
+    </form>
+  </div>
+
+  <script src="login.js"></script>
+</body>
+</html>
